EZP-28231: Fix alignment of embed elements in richtext

--- a/src/bundle/Resources/public/scss/fieldType/edit/_ezrichtext.scss
+++ b/src/bundle/Resources/public/scss/fieldType/edit/_ezrichtext.scss
@@ -28,16 +28,21 @@
         }
     }
 
-    [data-ezalign='right'] {
-        float: right;
-    }
+    .cke_widget_wrapper {
+        width: 100%;
+        display: flex;
 
-    [data-ezalign='left'] {
-        float: left;
-    }
+        &[data-ezalign='right'] {
+            justify-content: flex-end
+        }
 
-    [data-ezalign='center'] {
-        text-align: center;
+        &[data-ezalign='left'] {
+            justify-content: flex-start;
+        }
+
+        &[data-ezalign='center'] {
+            justify-content: center;
+        }
     }
 
     [data-ezelement='ezconfig'] {
